--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,34 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import CircleImage from "@components/CircleImage.astro";
+import Information from "@components/Information.astro";
+import Works from "@components/Works.astro";
+import Layout from "@layouts/Layout.astro";
+import Section from "@layouts/Section.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+<Layout title="Portfolio site | Toru Yaginuma ✌🏻">
+  <Fragment slot="side">
+    <Section isFlex>
+      <CircleImage
+        src="https://automaton-media.com/wp-content/uploads/2022/05/20220521-203445-001.jpg"
+        alt="me"
+      />
+      <Information title="Toru Yaginuma ✌🏻" description="Front-end Developer" />
+    </Section>
+
+    <p>
+      初めまして！ 柳沼亨と申します。
+      現在は業務アプリ、CMS、コーポレートサイト、特設サイトの実装を軸に活動を行っております。
+      遊び心と人間味のあるアプリケーション、Webサイトが好みです。
+      要件を満たす実装は当然として、パフォーマンスと遊び心を両立したUIの実装をテーマに、より良いモノづくりを目指しています。
+    </p>
+    <p>
+      Experiences html pug ejs handlebars css scss stylus JavaScript Vanilla
+      JQuery Vue original 　 nuxt.js React original next.js React Native php
+      laravel CMS wordpress micro cms drupal NoCode STUDIOS
+    </p>
+  </Fragment>
+  <Works />
 </Layout>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
+<style></style>
