--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,9 @@
 ---
+import Head from "../components/Head.astro";
+import "../styles/global.scss";
+import "../styles/variables.scss";
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,29 +11,42 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <Head title={title} />
+
+  <body>
+    <div class="layout">
+      <div class="layout__side"><slot name="side" /></div>
+      <main class="layout__main">
+        <slot />
+      </main>
+    </div>
+    <style lang="scss">
+      @use "sass:math";
+      .layout {
+        display: flex;
+
+        &__side {
+          display: none;
+          position: sticky;
+          top: 0;
+          left: 0;
+          min-width: 400px;
+          width: math.div(400, 1280) * 100vw;
+          border-right: 1px solid #666;
+          padding: 1rem;
+          height: 100vh;
+
+          @media (min-width: 1024px) {
+            display: block;
+          }
+        }
+
+        &__main {
+          width: 100%;
+          min-width: calc(100% - 400px);
+          padding: 1rem;
+        }
+      }
+    </style>
+  </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-</style>
