--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
-import Head from "../components/Head.astro";
-import "../styles/global.scss";
-import "../styles/variables.scss";
+import Head from "@components/Head.astro";
+import "@styles/global.scss";
+import "@styles/variables.scss";
+
 export interface Props {
   title: string;
 }
