--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import CircleImage from "@components/CircleImage.astro";
 import Information from "@components/Information.astro";
+import Splash from "@components/Splash.astro";
 import Works from "@components/Works.astro";
 import Layout from "@layouts/Layout.astro";
 import Section from "@layouts/Section.astro";
@@ -30,5 +31,7 @@ import Section from "@layouts/Section.astro";
   </Fragment>
   <Works />
 </Layout>
+
+<Splash />
 
 <style></style>
