--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,6 +1,6 @@
 ---
-import CircleImage from "@components/CircleImage.astro";
-import Information from "@components/Information.astro";
+import CircleImage from "@/components/CircleImage.astro";
+import Information from "@/components/Information.astro";
 ---
 
 <div class="profile">
@@ -10,8 +10,9 @@ import Information from "@components/Information.astro";
   />
   <Information
     title="Toru Yaginuma ✌🏻"
-    description="Front-end Developer"
-    hasSpace={true}
+    subTitle="Front-end Developer"
+    hasSpace
+    isTitle
   />
 </div>
 
