--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
-import Profile from "@components/Profile.astro";
-import Splash from "@components/Splash.astro";
-import Text from "@components/Text.astro";
-import Works from "@components/Works.astro";
-import Layout from "@layouts/Layout.astro";
-import Section from "@layouts/Section.astro";
+import Experience from "@/components/Experience.astro";
+import Profile from "@/components/Profile.astro";
+import Splash from "@/components/Splash.astro";
+import Text from "@/components/Text.astro";
+import Works from "@/components/Works.astro";
+import Layout from "@/layouts/Layout.astro";
+import Section from "@/layouts/Section.astro";
 ---
 
 <Layout title="Portfolio site | Toru Yaginuma ✌🏻">
@@ -13,18 +14,11 @@ import Section from "@layouts/Section.astro";
     <Section gap="xl">
       <Text text="初めまして！ 柳沼亨と申します。" />
       <Text
-        text="現在は業務アプリ、CMS、コーポレートサイト、特設サイトの実装を軸に活動を行っております。"
-      />
-      <Text
-        text="要件を満たす実装は当然として、パフォーマンスと遊び心を両立したUIの実装をテーマに、より良いモノづくりを目指しています。"
+        text="現在は業務アプリ、CMS、コーポレートサイト、特設サイトの実装を軸に活動を行っております。🙋‍♂️"
       />
     </Section>
     <Section gap="md">
-      <p>
-        Experiences html pug ejs handlebars css scss stylus JavaScript Vanilla
-        JQuery Vue original 　 nuxt.js React original next.js React Native php
-        laravel CMS wordpress micro cms drupal NoCode STUDIOS
-      </p>
+      <Experience />
     </Section>
   </Fragment>
 
