--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -77,7 +77,4 @@ const { image, href, title, role, comment, isRight } = Astro.props;
   }
 </style>
 
-<script lang="ts">
-  const hovers = document.querySelectorAll("[data-hover]");
-  console.log(hovers);
-</script>
+<script lang="ts"></script>
