--- a/src/components/Works.astro
+++ b/src/components/Works.astro
@@ -26,6 +26,7 @@ const response = await getWorks();
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(1, minmax(0, 1fr));
+    margin: 0;
 
     @include mq(md) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -33,6 +34,10 @@ const response = await getWorks();
 
     @include mq(xl) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    @include mq(2xl) {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
 </style>
