--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -18,7 +18,7 @@ const description = "Astro description";
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
     rel="stylesheet"
   />
-
+  <script src="@/ts/index.ts"></script>
   <meta name="generator" content={Astro.generator} />
   <title>{title}</title>
 </head>
