--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Head from "@/components/Head.astro";
+import Header from "@/components/Header.astro";
 import "@/styles/global.scss";
 import "@/styles/variables.scss";
 
@@ -16,36 +17,19 @@ const { title } = Astro.props;
 
   <body>
     <div class="layout">
-      <div class="layout__side"><slot name="side" /></div>
-      <main class="layout__main">
-        <slot />
-      </main>
+      <slot />
+      <Header />
     </div>
+
     <style lang="scss">
       @use "sass:math";
+      @use "@/styles/variables.scss" as *;
+
       .layout {
-        display: flex;
-
-        &__side {
-          display: none;
-          position: sticky;
-          top: 0;
-          left: 0;
-          min-width: 380px;
-          width: math.div(380, 1280) * 100vw;
-          border-right: 1px solid #666;
-          padding: 1rem;
-          height: 100vh;
-
-          @media (min-width: 1024px) {
-            display: block;
-          }
-        }
-
-        &__main {
-          width: 100%;
-          min-width: calc(100% - 400px);
-          padding: 1rem;
+        width: 100%;
+        padding: 1rem;
+        @include mq(lg) {
+          display: flex;
         }
       }
     </style>
