--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,7 @@ $mediaQueryBreakpoint: (
   md: "screen and (min-width: 768px)",
   lg: "screen and (min-width: 1024px)",
   xl: "screen and (min-width: 1280px)",
+  2xl: "screen and (min-width: 1536px)",
 );
 
 /*
