--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -4,6 +4,6 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="Portfolio site | Toru Yaginuma ✌🏻">
-  <Navigation current="about" />
-  <div>アバウト</div>
+  <Navigation current="contact" />
+  <div>コンタクト</div>
 </Layout>
