--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import Navigation from "@/components/Navigation.astro";
 import Works from "@/components/Works.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="✌🏻 Toru Yaginuma">
+  <Navigation current="works" />
   <Works />
 </Layout>
