--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
-$keyColor: #0000ff;
+$keyColor: rgb(42, 0, 255);
 $fontColor: #1e2115;
-$bgColor: #f9f8f8;
+$bgColor: #fff;
 $gap: 1rem;
 
 $lineHeightSm: 1.3;
