--- a/src/components/Works.astro
+++ b/src/components/Works.astro
@@ -24,9 +24,10 @@ const response = await getWorks();
     position: relative;
     display: grid;
     width: 100%;
-    gap: 1rem;
+    row-gap: map-get($margin, 3);
+    column-gap: map-get($margin, 2);
     grid-template-columns: repeat(1, minmax(0, 1fr));
-    margin: 1rem 0 0;
+    margin: map-get($margin, 0);
 
     @include mq(md) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -36,7 +37,7 @@ const response = await getWorks();
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 
-    @include mq(2xl) {
+    @include mq(xxl) {
       grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
