--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,8 @@
 ---
-import Navigation from "@/components/Navigation.astro";
 import Works from "@/components/Works.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="✌🏻 Toru Yaginuma">
-  <Navigation current="works" />
+<Layout title="works | Toru Yaginuma✌🏻" current="works">
   <Works />
 </Layout>
