--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,28 +1,118 @@
-$keyColor: rgb(42, 0, 255);
-$fontColor: #1e2115;
-$bgColor: #fff;
-$gap: 1rem;
+// colors
+$color-primary: #55ff33;
+$color-font: #2b273a;
+$color-link: #f00;
+$color-border: #848484;
+$color-white: #fff;
 
-$lineHeightSm: 1.3;
-$lineHeight: 1.5;
-$lineHeightLg: 1.8;
+// 横幅
+$min-width: 320px;
 
-$breakpoint: 1024px;
+// round
+$rounded: (
+  md: 4px,
+  lg: 8px,
+  xl: 12px,
+);
+
+$font-size-base: 16px;
+
+// fontSize
+$font-size: (
+  xxs: 0.667rem,
+  // 10.67px
+  xs: 0.75rem,
+  // 12px
+  sm: 0.857rem,
+  // 13px
+  md: 1rem,
+  // 16px
+  lg: 1.2rem,
+  // 19.2px
+  xl: 1.5rem,
+  // 24px
+  xxl: 2rem,
+
+  // 32px
+);
+$font-weight: (
+  regular: 400,
+  medium: 500,
+  bold: 700,
+);
+
+// 行送り
+$leading: (
+  none: 1,
+  tight: 1.25,
+  normal: 1.5,
+  relaxed: 1.75,
+);
+
+// 余白
+$margin: (
+  -4: -64px,
+  -3: -48px,
+  -2.5: -40px,
+  -2: -32px,
+  -1.5: -24px,
+  -1.25: -20px,
+  -1: -16px,
+  -0.75: -12px,
+  -0.5: -8px,
+  -0.25: -4px,
+  0: 0,
+  0.25: 4px,
+  0.5: 8px,
+  0.75: 12px,
+  1: 16px,
+  1.25: 20px,
+  1.5: 24px,
+  2: 32px,
+  2.5: 40px,
+  3: 48px,
+  4: 64px
+);
+
+// zIndex
+$z-index: (
+  base: 1,
+  modal: 2,
+  toast: 3,
+  alert: 4,
+);
 
 // ブレイクポイントの定義
-$mediaQueryBreakpoint: (
+$mq-breakpoint: (
   sm: "screen and (min-width: 640px)",
   md: "screen and (min-width: 768px)",
   lg: "screen and (min-width: 1024px)",
   xl: "screen and (min-width: 1280px)",
-  2xl: "screen and (min-width: 1536px)",
+  xxl: "screen and (min-width: 1536px)",
 );
 
-/*
- * メディアクエリを返す
-*/
-@mixin mq($breakpoint) {
-  @media #{map-get($mediaQueryBreakpoint, $breakpoint)} {
-    @content;
-  }
-}
+// easing
+$ease-in-sine: cubic-bezier(0.12, 0, 0.39, 0);
+$ease-out-sine: cubic-bezier(0.61, 1, 0.88, 1);
+$ease-in-out-sine: cubic-bezier(0.37, 0, 0.63, 1);
+$ease-in-quad: cubic-bezier(0.11, 0, 0.5, 0);
+$ease-out-quad: cubic-bezier(0.5, 1, 0.89, 1);
+$ease-in-out-quad: cubic-bezier(0.45, 0, 0.55, 1);
+$ease-in-cubic: cubic-bezier(0.32, 0, 0.67, 0);
+$ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
+$ease-in-out-cubic: cubic-bezier(0.65, 0, 0.35, 1);
+$ease-in-quart: cubic-bezier(0.5, 0, 0.75, 0);
+$ease-out-quart: cubic-bezier(0.25, 1, 0.5, 1);
+$ease-in-out-quart: cubic-bezier(0.76, 0, 0.24, 1);
+$ease-in-quint: cubic-bezier(0.64, 0, 0.78, 0);
+$ease-out-quint: cubic-bezier(0.22, 1, 0.36, 1);
+$ease-in-out-quint: cubic-bezier(0.83, 0, 0.17, 1);
+$ease-in-expo: cubic-bezier(0.7, 0, 0.84, 0);
+$ease-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
+$ease-in-out-expo: cubic-bezier(0.87, 0, 0.13, 1);
+$ease-in-circ: cubic-bezier(0.55, 0, 1, 0.45);
+$ease-out-circ: cubic-bezier(0, 0.55, 0.45, 1);
+$ease-in-out-circ: cubic-bezier(0.85, 0, 0.15, 1);
+$ease-in-back: cubic-bezier(0.36, 0, 0.66, -0.56);
+$ease-out-back: cubic-bezier(0.34, 1.56, 0.64, 1);
+$ease-in-out-back: cubic-bezier(0.68, -0.6, 0.32, 1.6);
